<resources>
    <string name="app_name">GoForUs</string>
    <string name="title_activity_availability">Availability</string>
    <string name="default_info_window">default info window</string>
    <string name="custom_info_contents">custom info content</string>
    <string name="custom_info_window">custom info window</string>

    <string name="action_settings">Settings</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="loading">LOADING</string>

    <string name="nearby_driver_list_title">Drivers Near You (%s)</string>
    <string name="gps_turned_off">To provide a better and more accurate service, GPS is essential. Please enable your GPS location</string>
    <string name="title_activity_request_permission">RequestPermissionActivity</string>
    <string name="gps_is_required_alert_text">GoForUs requires GPS to be enabled.</string>
    <string name="title_activity_login">Log In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout">Logout</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="title_activity_driver_details">Driver Details</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="messages_fragment_title">Message</string>
    <string name="inbox_fragment_title">Inbox (%s)</string>
    <string name="map_fragment_title">Live Map</string>
    <string name="standard_failure_response">Something went wrong, please try again later.</string>
    <string name="message_sent">message was sent successully</string>
    <string name="losing_connection">Losing Connection - hang tight!</string>
    <string name="message_item_sent">Sent</string>
    <string name="message_item_delivered">Delivered</string>
    <string name="message_item_read">Read</string>
    <string name="message_item_seen">Seen</string>
    <string name="send_message">Send</string>

    <string name="queryTypePrompt">Select Message Type</string>
    <string name="write_message_hint">write your message here &#8320;</string>
    <string name="small_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="difficulty_sending_failure_response">We are experiencing network issues, we will keep trying for now. Please wait&#8320;</string>
    <string name="login_register_seperator">or</string>
    <string name="tips_title">Tips</string>
    <string name="tip_text_driver_indicator">This icon indicates a Driver which is in your area but currently off your screen. Clicking this icon will take you straight to the driver it\'s associated with.</string>
    <string name="tip_text_driver">This icon is a Driver. You will see this icon move around the map to show the exact location of the said Driver. This is what the indicator mentioned above will point towards. Clicking this will bring up a mini profile where you can access quick driver information such as rating and their availability.</string>
    <string name="tips">Tips</string>
    <string name="dont_show_this_again">do not show this again</string>
    <string name="ok">Ok</string>
    <string name="tip_text_read_message_fab">This button means that you have an empty inbox, clicking this icon will take you straight to your inbox where you can contact Drivers you\'ve already started a discussion with</string>
    <string name="tip_text_mini_drivers_profile">Here you see basic information related to this driver. Click on the box and you can read reviews and more in-depth information about this driver such as what their typical pickup points are. You will be able to contact the driver if you have a query or start a delivery with this driver.</string>
    <string name="jobs_fragment_title">My Jobs</string>
    <string name="offline_online">Offline/Online</string>

    <string name="gcm_server_key">AIzaSyDhoDj9FGx61Bw3BGo56fbRowgi7IDDryg</string>
    <string name="estimated_price">Estimated Price:</string>
    <string name="drop_off_at">Drop Off At:</string>
    <string name="pickup_from">Pickup From:</string>
    <string name="estimated_cost">Estimated Cost:</string>
    <string name="too_late_called_order_for_you">Too late. We cancelled this order.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
